--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "dependencies": {
     "gatsby": "^3.1.1",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
-    "gatsby-plugin-image": "^1.1.1",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "prop-types": "^15.7.2",
@@ -20,7 +22,8 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "sass": "^1.32.8"
   },
   "keywords": [
     "gatsby"
