--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Dr. Cristiano Barcellos",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Site profissional médico do Dr. Cristiano Barcellos, endocrinologista e metabologista",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
