Seções "Entre em Contato" e "Sobre" adicionadas

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,16 +1,10 @@
 {
     "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@components": [
-          "src/components"
-        ],
-        "@styles": [
-            "src/styles"
-        ],
-        "@images": [
-            "src/images"
-        ],
-      }
+        "baseUrl": ".",
+        "paths": {
+            "@components": ["src/components"],
+            "@styles": ["src/styles"],
+            "@images": ["src/images"]
+        }
     }
-  }
+}
